--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -40,13 +40,13 @@ progressive_web_app/background_color=Color(0, 0, 0, 1)
 
 name="Windows Desktop"
 platform="Windows Desktop"
-runnable=true
+runnable=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../teste/teste export.exe"
+export_path="../../../Godot games/XP3 teste 1.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -56,8 +56,8 @@ encrypt_directory=false
 
 custom_template/debug=""
 custom_template/release=""
-debug/export_console_wrapper=1
-binary_format/embed_pck=false
+debug/export_console_wrapper=0
+binary_format/embed_pck=true
 texture_format/bptc=true
 texture_format/s3tc=true
 texture_format/etc=false
@@ -70,13 +70,13 @@ codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PackedStringArray()
 application/modify_resources=true
-application/icon=""
+application/icon="res://sprites/NightlessNight.png"
 application/console_wrapper_icon=""
 application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
-application/company_name=""
-application/product_name=""
+application/company_name="Poggers Inc."
+application/product_name="XP3"
 application/file_description=""
 application/copyright=""
 application/trademarks=""
