--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -46,7 +46,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../Godot games/XP3 teste 1.exe"
+export_path="../../../Games I made/subeecho.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -70,8 +70,8 @@ codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PackedStringArray()
 application/modify_resources=true
-application/icon="res://sprites/NightlessNight.png"
-application/console_wrapper_icon=""
+application/icon="res://sprites/Misc/Icon.png"
+application/console_wrapper_icon="res://sprites/Misc/Icon.png"
 application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
