--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -70,8 +70,8 @@ codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PackedStringArray()
 application/modify_resources=true
-application/icon="res://sprites/Misc/Fundo Menu-export.png"
-application/console_wrapper_icon="res://sprites/Misc/Fundo Menu-export.png"
+application/icon="res://sprites/Misc/Icon com logo.png"
+application/console_wrapper_icon="res://sprites/Misc/Icon com logo.png"
 application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
