--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -44,7 +44,7 @@ runnable=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.txt"
 exclude_filter=""
 export_path="../../../Games I made/Echo.exe"
 encryption_include_filters=""
