--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -46,7 +46,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.txt"
 exclude_filter=""
-export_path="../../../Games I made/Echo.exe"
+export_path="../../../Games I made/Echo 1.0.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -75,8 +75,8 @@ application/console_wrapper_icon="res://sprites/Misc/Icon com logo.png"
 application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
-application/company_name="Poggers Inc."
-application/product_name="XP3"
+application/company_name="Cosmos"
+application/product_name="AbyssalCleaner"
 application/file_description=""
 application/copyright=""
 application/trademarks=""
