--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -40,7 +40,7 @@ progressive_web_app/background_color=Color(0, 0, 0, 1)
 
 name="Windows Desktop"
 platform="Windows Desktop"
-runnable=false
+runnable=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
