--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -46,7 +46,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.txt"
 exclude_filter=""
-export_path="../../../Games I made/Echo 1.0.exe"
+export_path="../../../Games I made/Abyssal Cleaner -V0.9.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
