--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -38,7 +38,7 @@ progressive_web_app/background_color=Color(0, 0, 0, 1)
 
 [preset.1]
 
-name="Abyssal Cleaner .exe"
+name="Windows Desktop"
 platform="Windows Desktop"
 runnable=true
 dedicated_server=false
@@ -46,7 +46,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.txt"
 exclude_filter=""
-export_path="../../../Games I made/Abyssal Cleaner/1.0/Abyssal Cleaner -V1.0.exe"
+export_path="../../../Games I made/Abyssal Cleaner -V0.9.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
